Make configuration more suitable for debugging

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,18 @@
+worker_processes 1;
+daemon off;
+
 events {
         worker_connections  1024;
 }
 
 http {
         server {
+                listen  8080;
                 location / {
-                        return 200 "api";
+                        return 200 "ok";
                 }
         }
+
+        access_log /dev/stdout;
+        error_log /dev/stderr debug;
 }
